--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Информация об Авторе и описание проекта -->
-		<meta name="description" content="Сайт разработчика Сергея Шелестова">
-		<meta name="auyhor" content="Сергей Шелестов">
+		<meta name="description" content="Сайт-визитка Кучинская Людмила">
+		<meta name="auyhor" content="Людмила Кучинская">
 		<!-- Иконка, которая будет на вкладке в браузере -->
 		<link rel="icon" href="img/favicon.ico">
 		<!-- Заголовок на вкладке в браузере -->
@@ -31,7 +31,7 @@
 		<!-- /.col-7 -->
 		<div class="col-lg-6 col-md-4">
 			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Интернет-предприниматель</p>
-			<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Шелестов Сергей</h1>
+			<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Кучинская Людмила</h1>
 			<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.3s">Создание международного<br>
 			Сетевого бизнеса</p>
 			<div class="header-button-block wow fadeInRightBig" data-wow-delay="0.4s">
@@ -88,7 +88,7 @@
 В 2014 г. В Росси продано продукции на 43млн💲
 За 2017 г. В России было продано продукции на 1млрд💲
 </p>
-				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
 			</div>
 			</div>
 			<!-- /.col-6 -->
@@ -101,7 +101,7 @@
 </div>
 				<h3>ВИДЕО ЭКСПЕРИМЕНТ С БИОПРОДУКТОМ «Хитозан»</h3>
 				<p class="portfolio-text">Обновленная версия сайта знакомит посетителей с компаниями, уже принимающими карты к оплате, и приглашает всех остальных присоединиться к проекту...</p>
-				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
 				</div>
 			</div>
 			<!-- /.col-6 -->
@@ -114,17 +114,17 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h4 class="footer-author">Сергей Шелестов</h4>
+				<h4 class="footer-author">Кучинская Людмила</h4>
 				<p class="footer-text">Бизнес консультант-предприниматель</p>
 				<p class="footer-text">Tiens Group Co. Ltd</p>
 		</div>
 			<div class="col-md-4">
 				<div class="social-block">
 					<p>Подпишитесь:</p>
-					<a class="wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/profile.php?id=100011389429443" target="_blank"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.1s" href="#" target="_blank"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
 					<a class="wow bounceInDown" data-wow-delay="0.2s" href="#" target="_blank"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
-					<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://vk.com/shelestov.sergey" target="_blank"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-					<a class="wow bounceInDown" data-wow-delay="0.4s" href="https://www.youtube.com/channel/UC1LNweMqWIQS7fyIYXwoESQ?view_as=subscriber" target="_blank"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.3s" href="#" target="_blank"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.4s" href="#" target="_blank"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
 					
 				</div>
 			</div>
