--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="container">
 	  <div class="row">
 		<div class="col-lg-6 col-md-8">
-		  <img class="header-img wow fadeInLeftBig" src="img/main-img.jpg" alt="Моё фото"> 
+		  <img class="header-img wow fadeInLeftBig" src="img/main-img.png" alt="Моё фото"> 
 		</div>
 		<!-- /.col-7 -->
 		<div class="col-lg-6 col-md-4">
