--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Иконка, которая будет на вкладке в браузере -->
 		<link rel="icon" href="img/favicon.ico">
 		<!-- Заголовок на вкладке в браузере -->
-		<title>Сергей Шелестов-система прорыв</title>
+		<title>Людмила Кучинская-система прорыв</title>
 		<!--Шрифты от Google-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet"> 
 		<!-- Подключаем наш файл со стилями, который находится в папке css-->
