--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   	</iframe>
 </div>
 				<h3>ВИДЕО ЭКСПЕРИМЕНТ С БИОПРОДУКТОМ «Хитозан»</h3>
-				<p class="portfolio-text">Хитозан российский  содержит 15% хитозана и 85% хитина,<br>Хитозан американский - 38% хитозана и 62% хитина, <br>Хитозан японский - 65% хитозана и 35% хитина<br>Хитозан Тяньши - 85% хитозана и 15% хитина. Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
+				<p class="portfolio-text">Хитозан российский  содержит 15% хитозана и 85% хитина,<br>Хитозан американский - 38% хитозана и 62% хитина, <br>Хитозан японский - 65% хитозана и 35% хитина<br>Хитозан Тяньши - 85% хитозана и 15% хитина.<br> Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
 				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
 				</div>
 			</div>
