--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0" frameborder="0"  allowfullscreen>
   	</iframe>
 </div>
-<p class="portfolio-text">💡Чтобы начать обучение войдите в свой ЛК<br> <a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Вход в ЛК</a> выберите продукт, оформите карту, сгенерируйте лендинг и делитесь с друзьями этой новостью. Поддержка приходит на Email 🎯Наша цель:
+<p class="portfolio-text">💡Чтобы начать обучение войдите в свой ЛК<br> <a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Вход в ЛК</a> выберите продукт, оформите карту, сгенерируйте лендинг и делитесь с друзьями этой новостью. Поддержка приходит на Email 🎯Наша цель:
 Мы строим организацию для компании "Tiens" БЕЗ продаж. ❗Продажами занимаются сотрудники специализированных магазинов "ИП"
 Создание ВАШЕЙ команды на старте я беру на себя. Получив свой реферальный лендинг вы сможете сами расширять свою организацию и увеличивать доход.
 За 2 месяца вы можете выйти на недельный максимум 800$ по карте номиналом 100$
