--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section class="portfolio">
 	<div class="container">				
 	<div class="portfolio-block wow fadeIn">
-		<h2 class="portfolio-title">Опыты с продукцией «Тяньши»:</h2>
+		<h2 class="portfolio-title">Опыты с биопродукцией «Тяньши»:</h2>
 		<!--<p class="portfolio-subtitle">Мои работы</p>-->
 		<div class="row">
 			<div class="col-md-6">
@@ -100,8 +100,8 @@
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/iaRPUX3Ygdo?rel=0" frameborder="0"  allowfullscreen>
   	</iframe>
 </div>
-				<h3>ВИДЕО ЭКСПЕРИМЕНТ С БИОПРОДУКТОМ «Хитозан»</h3>
-				<div class="outline">
+				<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
+				<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p><div class="outline">
 				<p class="portfolio-text2">Хитозан российский  содержит 15% хитозана и 85% хитина,<br>Хитозан американский - 38% хитозана и 62% хитина, <br>Хитозан японский - 65% хитозана и 35% хитина<br>Хитозан Тяньши - 85% хитозана и 15% хитина.</p></div><p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
 				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
 				</div>
