--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 			<div class="col-md-4">
 				<h4 class="footer-author">Кучинская Людмила</h4>
 				<p class="footer-text">Бизнес консультант-предприниматель</p>
-				<p class="footer-text"><img src="img/logo_tiens.png" width="30" height="30"  alt="logo_tiens"></p>
-				<p class="footer-text2">Tiens Group Co. Ltd</p>
+				<p class="footer-text">Tiens Group Co. Ltd</p>
 		</div>
 			<div class="col-md-4">
 				<div class="social-block">
