--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.
 ❗Продукт под контролем РАМН<br>
 👍Я предлагаю вам создать растущий источник дохода на этом и других уникальных продуктах.
-По программе лояльности. Смотрите Видео:</p> <div class="embed-responsive embed-responsive-16by9">
+По программе лояльности. Смотрите Видео:</p> 
+<div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0" frameborder="0"  allowfullscreen>
   	</iframe>
 </div>
@@ -96,6 +97,7 @@
 			<div class="col-md-6">
 				<div class="portfolio-col-2">
 					<!--<img src="img/portfolio-img-2.jpg" alt="Мир">-->
+<!-- 16:9 aspect ratio -->
 					<div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/iaRPUX3Ygdo?rel=0" frameborder="0"  allowfullscreen>
   	</iframe>
