--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Сайт-визитка Кучинская Людмила">
 		<meta name="auyhor" content="Людмила Кучинская">
 		<!-- Иконка, которая будет на вкладке в браузере -->
-		<link rel="icon" href="img/favicon.ico">
+		<link rel="icon" href="img/favicon.jpg">
 		<!-- Заголовок на вкладке в браузере -->
 		<title>Людмила Кучинская-система прорыв</title>
 		<!--Шрифты от Google-->
@@ -35,7 +35,7 @@
 			<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.3s">Создание международного<br>
 			Сетевого бизнеса</p>
 			<div class="header-button-block wow fadeInRightBig" data-wow-delay="0.4s">
-			<a href="https://vk.me/shelestov.sergey" target="_blank" class="header-button">Связаться</a>
+			<a href="#" target="_blank" class="header-button">Связаться</a>
 			<small>*Это бесплатно</small>
 		</div>
 		<!-- /.col-5 -->
