--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="col-md-4">
 				<div class="footer-cta-block">
 					<p class="footer-cta">Обратная связь</p>
-				    <a href="https://vk.com/shelestov.sergey" target="_blank" class="footer-button">Напишите мне</a>
+				    <a href="#" target="_blank" class="footer-button">Напишите мне</a>
 				</div>
 				
 			</div>
