--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 👍Я предлагаю вам создать растущий источник дохода на этом и других уникальных продуктах.
 По программе лояльности. Смотрите Видео:</p> 
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0" frameborder="0"  allowfullscreen>
-  	</iframe>
+  <!-- <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0"  frameborder="0" allowfullscreen></iframe>-->
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 <p class="portfolio-text">💡Чтобы начать обучение войдите в свой ЛК<br> <a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Вход в ЛК</a> выберите продукт, оформите карту, сгенерируйте лендинг и делитесь с друзьями этой новостью. Поддержка приходит на Email 🎯Наша цель:
 Мы строим организацию для компании "Tiens" БЕЗ продаж. ❗Продажами занимаются сотрудники специализированных магазинов "ИП"
