--- a/index.html
+++ b/index.html
@@ -63,33 +63,18 @@
 </div>
 				<h3>Видео эксперимент с биопродуктом Икан «целебные капсулы» </h3>
 				<p class="portfolio-text">На данном опыте можно видеть, как биопродукт Икан (целебные капсулы) нейтрализует раствор йода.
-Для данного опыта используются:
-1.Стакан с водой 2.Рис 3.Йод
-4.Целебные капсулы (Икан)
+<p class="text-color">Для данного опыта используются:</p>
+<p class="portfolio-text">1.Стакан с водой<br>2.Рис<br>3.Йод<br>
+4.Целебные капсулы (Икан)<br>
 💡Капсулы "Икан" применяются, как добавка к основному рациону питания.
-Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.
-❗Продукт под контролем РАМН<br>
-👍Я предлагаю вам создать растущий источник дохода на этом и других уникальных продуктах.
-По программе лояльности. Смотрите Видео:</p> 
+Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.</p>
+<h3>Продукция «Тяньши» под контролем РАМН</h3> 
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/nXemfEYejAY?rel=0"  frameborder="0" allowfullscreen></iframe>
+  <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0"  allowfullscreen>
+  	</iframe>
 </div>
-<p class="portfolio-text">💡Чтобы начать обучение войдите в свой ЛК<br> <a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Вход в ЛК</a> выберите продукт, оформите карту, сгенерируйте лендинг и делитесь с друзьями этой новостью. Поддержка приходит на Email 🎯Наша цель:
-Мы строим организацию для компании "Tiens" БЕЗ продаж. ❗Продажами занимаются сотрудники специализированных магазинов "ИП"
-Создание ВАШЕЙ команды на старте я беру на себя. Получив свой реферальный лендинг вы сможете сами расширять свою организацию и увеличивать доход.
-За 2 месяца вы можете выйти на недельный максимум 800$ по карте номиналом 100$
-📽️См. Видео ссылка в профиле
-Результат зависит от ваших целей🎯
-Преимущества⤵️
-▪️Вы платите только себе.
-▪️Старт со 100$ идут на ваш накопительный счёт.
-▪️Все Последующие заказы также идут на ваш накопительный счёт.
-▪️Нет никаких дополнительных платежей.
-▪️У каждого партнёра свой реферальный сайт. 📈Индустрия растёт на 22% в год.На рынке с 1995 года
-В 2014 г. В Росси продано продукции на 43млн💲
-За 2017 г. В России было продано продукции на 1млрд💲
-</p>
-				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
+
+				<p><a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a></p>
 			</div>
 			</div>
 			<!-- /.col-6 -->
