--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		</div>
 		<!-- /.col-7 -->
 		<div class="col-lg-5 col-md-4">
-			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Интернет-предприниматель</p>
+			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Консультант-дистрибьютор</p>
 			<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Кучинская Людмила</h1>
-			<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.3s">Создание международного<br>
-			Сетевого бизнеса</p>
+			<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.3s">Элитная биопродукция<br>
+			Компании «Тяньши»</p>
 			<div class="header-button-block wow fadeInRightBig" data-wow-delay="0.4s">
 			<a href="#" target="_blank" class="header-button">Связаться</a>
 			<small>*Это бесплатно</small>
@@ -49,8 +49,15 @@
 <section class="portfolio">
 	<div class="container">				
 	<div class="portfolio-block wow fadeIn">
+		<h3 class="portfolio-subtitle">Основная функция биопродуктов «Тяньши»<br>- это обеспечение безопасности здоровья:</h3>
+		
+		<ul>
+			<li>Нейтрализация побочного действия спортивной фармакологии, лекарств, химиотерапии.</li>
+			<li>Предотвращение заболеваний на стадии возникновения.</li>
+			<li>Устранение дисбаланса питания:</li>
+			<li>Безопасное выведение лишних жиров во время еды.</li>
+		</ul>
 		<h2 class="portfolio-title">Опыты с биопродукцией «Тяньши»:</h2>
-		<!--<p class="portfolio-subtitle">Мои работы</p>-->
 		<div class="row">
 			<div class="col-md-6">
 			<div class="portfolio-col-1">
