--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 <section class="portfolio">
 	<div class="container">				
 	<div class="portfolio-block wow fadeIn">
-		<h3 class="portfolio-subtitle">Основная функция биопродуктов «Тяньши»<br>- это обеспечение безопасности здоровья:</h3>
+		<h3 class="portfolio-subtitle">Основная функция биопродуктов «Тяньши»<br>- это обеспечение безопасности здоровья</h3>
 		
 		<ul>
 			<li>Нейтрализация побочного действия спортивной фармакологии, лекарств, химиотерапии.</li>
 			<li>Предотвращение заболеваний на стадии возникновения.</li>
-			<li>Устранение дисбаланса питания:</li>
+			<li>Устранение дисбаланса питания</li>
 			<li>Безопасное выведение лишних жиров во время еды.</li>
 		</ul>
 		<h2 class="portfolio-title">Опыты с биопродукцией «Тяньши»:</h2>
