--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<ul>
 			<li>Нейтрализация побочного действия спортивной фармакологии, лекарств, химиотерапии.</li>
 			<li>Предотвращение заболеваний на стадии возникновения.</li>
+			<li>Помогают обнаружить вирус организму и уничтожить его</li>
 			<li>Устранение дисбаланса питания</li>
 			<li>Безопасное выведение лишних жиров во время еды.</li>
 		</ul>
@@ -95,7 +96,14 @@
 </div>
 				<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
 				<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p><div class="outline">
-				<p class="portfolio-text2">Хитозан российский  содержит 15% хитозана и 85% хитина,<br>Хитозан американский - 38% хитозана и 62% хитина, <br>Хитозан японский - 65% хитозана и 35% хитина<br>Хитозан Тяньши - 85% хитозана и 15% хитина.</p></div><p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
+				<ul class="portfolio-text2">
+						<li>Хитозан Российский  содержит 15% хитозана и 85% хитина</li>
+						<li>Хитозан американский - 38% хитозана и 62% хитина</li>
+						<li>Хитозан японский - 65% хитозана и 35% хитина</li>
+						<li>Хитозан Тяньши - 85% хитозана и 15% хитина</li>
+					</ul>
+				</div>
+				<p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
 				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
 				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
 				</div>
