--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <header>
 	<div class="container">
 	  <div class="row">
-		<div class="col-lg-7 col-md-8">
+		<div class="col-lg-7 col-md-8 col-sm-6">
 		  <img class="header-img wow fadeInLeftBig" src="img/main-img.png" alt="Моё фото"> 
 		</div>
 		<!-- /.col-7 -->
-		<div class="col-lg-5 col-md-4">
+		<div class="col-lg-5 col-md-4 col-sm-6">
 			
 			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Консультант-дистрибьютор</p>
 			<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Кучинская Людмила</h1>
@@ -66,46 +66,45 @@
 				<!--<img src="img/Семинар-6-секретов-личных-финансов.jpg" alt="Семинар">-->
 
 <!-- 16:9 aspect ratio -->
+
+					<!--Видео 1-->
+			<h3>Эксперимент «целебные капсулы» Икан</h3>
 <div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/PJ4XITFT8LE?rel=0" frameborder="0" allowfullscreen>
   	 </iframe>
-</div>
-				<h3>Видео эксперимент с биопродуктом Икан «целебные капсулы» </h3>
-				<p class="portfolio-text">На данном опыте можно видеть, как биопродукт Икан (целебные капсулы) нейтрализует раствор йода.</p>
+</div>				
+				
+				<p>На данном опыте можно видеть, как биопродукт Икан (целебные капсулы) нейтрализует раствор йода.</p>
 <p class="text-color">Для данного опыта используются:</p>
 <div>
 <ul class="portfolio-text">
 	<li>Стакан с водой</li>
 	<li>Рис</li>
 	<li>Йод</li>
-	<li>Целебные капсулы(Икан)</li>
+	<li>Целебные капсулы (Икан)</li>
 </ul>
 </div>
-💡Капсулы "Икан" применяются, как добавка к основному рациону питания.
+<p>💡Капсулы "Икан" применяются, как добавка к основному рациону питания.
 Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.</p>
-
-
-<h3>Продукция «Тяньши» под контролем РАМН</h3> 
+			<!--Видео 2-->
+<!--<h3>Продукция «Тяньши» под контролем РАМН</h3> 
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0"  allowfullscreen>
-  	</iframe>
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
-				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
-			</div>
-			</div>
-			<!-- /.col-6 -->
-			<div class="col-md-6">
-				<div class="portfolio-col-2">
-					<!--<img src="img/portfolio-img-2.jpg" alt="Мир">-->
-<!-- 16:9 aspect ratio -->
+				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>-->
+
+				<!-- 16:9 aspect ratio --> 
+
+											<!--Видео 2-->
+				<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
 					<div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/iaRPUX3Ygdo?rel=0" frameborder="0"  allowfullscreen>
   	</iframe>
-</div>
-				<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
-				<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p><div class="outline">
-				<ul class="portfolio-text2">
+</div> 			
+					<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p>
+				<div class="outline">
+					<ul class="portfolio-text2">
 						<li>Хитозан Российский  содержит 15% хитозана и 85% хитина</li>
 						<li>Хитозан американский - 38% хитозана и 62% хитина</li>
 						<li>Хитозан японский - 65% хитозана и 35% хитина</li>
@@ -114,13 +113,49 @@
 				</div>
 				<p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
 				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
-				<a href="http://mlmsystem.su/land1-kucinskaja" target="_blank">Регистрация на сайте</a>
+				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+			<!--Видео 3-->
+				<h3>Видео опыт c бытовым прибором «Озонатор»</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8lSzUKKy7_Q?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
+				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+			</div>
+			</div>
+			<!-- /.col-6 -->
+			<div class="col-md-6">
+				<div class="portfolio-col-2">
+					<!--<img src="img/portfolio-img-2.jpg" alt="Мир">-->
+		<!--Видео 4-->
+
+				<h3>Продукция «Тяньши» под контролем РАМН</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+				
+				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
+				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+
+				<!--<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
+				<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p>
+				<div class="outline">
+					<ul class="portfolio-text2">
+						<li>Хитозан Российский  содержит 15% хитозана и 85% хитина</li>
+						<li>Хитозан американский - 38% хитозана и 62% хитина</li>
+						<li>Хитозан японский - 65% хитозана и 35% хитина</li>
+						<li>Хитозан Тяньши - 85% хитозана и 15% хитина</li>
+					</ul>
+				</div>
+				<p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
+				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
+				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a> -->
 				</div>
 			</div>
 			<!-- /.col-6 -->
-		</div>
-	</div>		
-   </div>
+			
+
 
 </section>
 <footer>
@@ -130,6 +165,11 @@
 				<h4 class="footer-author">Кучинская Людмила</h4>
 				<p class="footer-text">Бизнес консультант-предприниматель</p>
 				<p class="footer-text">Tiens Group Co. Ltd</p>
+				<div class="contacts">
+				<p><a class="footertel wow fadeInLeftBig" href="callto:+79520554198">Позвоните мне с помощью Skype</a></p>
+
+				<p><span class="autor">Мобильный:</span><a class="footertel wow fadeInLeftBig" href="tel:+7 (952) 055 41 98">+7 (952) 055 41 98</a></p>
+			</div>
 		</div>
 			<div class="col-md-4">
 				<div class="social-block">
