--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- 16:9 aspect ratio -->
 
 					<!--Видео 1-->
-			<h3>Эксперимент «целебные капсулы» Икан</h3>
+			<h3>Эксперимент«целебные капсулы» Икан</h3>
 <div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/PJ4XITFT8LE?rel=0" frameborder="0" allowfullscreen>
   	 </iframe>
@@ -117,7 +117,7 @@
 			<!--Видео 3-->
 				<h3>Видео опыт c бытовым прибором «Озонатор»</h3> 
 <div class="embed-responsive embed-responsive-16by9">
- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8lSzUKKy7_Q?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wKcElcZDnhA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
 				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
@@ -154,9 +154,6 @@
 				</div>
 			</div>
 			<!-- /.col-6 -->
-			
-
-
 </section>
 <footer>
 	<div class="container">
