--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- 16:9 aspect ratio -->
 
 					<!--Видео 1-->
-			<h3>Эксперимент«целебные капсулы»<br>Икан</h3>
+			<h3>Эксперимент<br>«целебные капсулы» Икан</h3>
 <div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/PJ4XITFT8LE?rel=0" frameborder="0" allowfullscreen>
   	 </iframe>
