--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- 16:9 aspect ratio -->
 
 					<!--Видео 1-->
-			<h3>Эксперимент<br>«целебные капсулы» Икан</h3>
+			<h3>Эксперимент<br>«целебные капсулы»<br>Икан</h3>
 <div class="embed-responsive embed-responsive-16by9">
   <iframe  class="embed-responsive-item" src="https://www.youtube.com/embed/PJ4XITFT8LE?rel=0" frameborder="0" allowfullscreen>
   	 </iframe>
@@ -129,7 +129,7 @@
 					<!--<img src="img/portfolio-img-2.jpg" alt="Мир">-->
 		<!--Видео 4-->
 
-				<h3>Продукция «Тяньши»<br>под контролем РАМН</h3> 
+				<h3>Продукция «Тяньши»<br>под контролем<br>РАМН</h3> 
 <div class="embed-responsive embed-responsive-16by9">
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
