--- a/index.html
+++ b/index.html
@@ -111,7 +111,21 @@
 						<li>Хитозан Тяньши - 85% хитозана и 15% хитина</li>
 					</ul>
 				</div>
-				<p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
+				<p class="portfolio-text3">
+					•Безвредное Выведение трансжиров из организма;<br>
+					•Регуляция Холестерина ЛПВП и ЛПНП;<br>
+					•Гиалуроновая кислота входящая в состав мембран оболочек клеток;<br>
+					•Подавляет раковые клетки, регулируя pH, 7,35;<br>
+					•Препятствует метастазированию;<br> 
+					•Снижает кровяное давление, уровень сахара в моче;<br> 
+					•Улучшает микроциркуляцию тканей, адсорбирует и выводит соли тяжелых металлов;<br> 
+					•Активизирует заживление ожоговой и раневой поверхности без образования рубцов;<br> 
+					•Обладает кровоостанавливающим и обезболивающим эффектами.<br>
+				Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
+				<h3>Подробное ВИДЕО<br>С БИОПРОДУКТОМ «Хитозан»</h3>
+					<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v40VPLGNr5E?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
 				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
 			<!--Видео 3-->
@@ -134,6 +148,25 @@
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JwoMS-9rKK0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
+		<h3>Здоровье-<br>мудрых гонорар</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dCVvAfU3TBA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<h3>ЩЕЛОЧНАЯ СИСТЕМА ОЗДОРОВЛЕНИЯ<br>АУДИОКНИГА Часть 1-3</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_hcUaKFHwTg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+		
+		<h3>ЩЕЛОЧНАЯ СИСТЕМА ОЗДОРОВЛЕНИЯ<br>АУДИОКНИГА Часть 2-3</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rOrDH5sFoCY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+	<h3>ЩЕЛОЧНАЯ СИСТЕМА ОЗДОРОВЛЕНИЯ<br>АУДИОКНИГА Часть 3-3</h3> 
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mPhvpQwdeYY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 				
 				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
 				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
@@ -175,6 +208,7 @@
 					<a class="wow bounceInDown" data-wow-delay="0.2s" href="#" target="_blank"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
 					<a class="wow bounceInDown" data-wow-delay="0.3s" href="#" target="_blank"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
 					<a class="wow bounceInDown" data-wow-delay="0.4s" href="#" target="_blank"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.4s" href="#" target="_blank"><img src="img/socials/instagram-symbol.png" alt="Instagram"></a>
 					
 				</div>
 			</div>
