--- a/index.html
+++ b/index.html
@@ -171,19 +171,15 @@
 				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
 				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
 
-				<!--<h3>ВИДЕО ЭКСПЕРИМЕНТ<br>С БИОПРОДУКТОМ «Хитозан»</h3>
-				<p class="portfolio-text1">Сегодня, более миллиона людей во всём мире принимают хитин и хитозан в качестве диетических добавок для улучшения здоровья.</p>
-				<div class="outline">
-					<ul class="portfolio-text2">
-						<li>Хитозан Российский  содержит 15% хитозана и 85% хитина</li>
-						<li>Хитозан американский - 38% хитозана и 62% хитина</li>
-						<li>Хитозан японский - 65% хитозана и 35% хитина</li>
-						<li>Хитозан Тяньши - 85% хитозана и 15% хитина</li>
-					</ul>
-				</div>
-				<p class="portfolio-text3">Японцы пользуются хитозаном Тяньши, несмотря на то, что на разработку собственного хитозана потратили около 10 млн.$.</p>
-				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
-				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a> -->
+				<div class="ya-share2 col-sm-12" data-services="vkontakte,facebook,odnoklassniki,gplus,viber,whatsapp,skype,telegram" data-counter=""></div>
+
+<center>
+<!-- VK Widget -->
+<div id="vk_groups"></div>
+<script type="text/javascript">
+VK.Widgets.Group("vk_groups", {mode: 3}, 20003922);
+</script></center>
+
 				</div>
 			</div>
 			<!-- /.col-6 -->
@@ -220,7 +216,9 @@
 				
 			</div>
 		</div>
+	</div>
 <!--/.container -->
+
 </footer>
 <script src="js/wow.min.js"></script>
 <script>
