--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
-
+		
+		<script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
 		<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 		<script src="//yastatic.net/share2/share.js"></script>
 	
