--- a/index.html
+++ b/index.html
@@ -172,10 +172,12 @@
 				<div class="ya-share2 col-sm-12" data-services="vkontakte,facebook,odnoklassniki,gplus,viber,whatsapp,skype,telegram" data-counter=""></div>
 
 <center>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
+
 <!-- VK Widget -->
-<div id="vk_groups"></div>
+<div id="vk_subscribe"></div>
 <script type="text/javascript">
-VK.Widgets.Group("vk_groups", {mode: 3}, 20003922);
+VK.Widgets.Subscribe("vk_subscribe", {}, 134716510);
 </script></center>
 
 				</div>
