--- a/index.html
+++ b/index.html
@@ -181,6 +181,19 @@
 VK.Widgets.Subscribe("vk_subscribe", {}, 134716510);
 </script></center>
 
+<!-- Put this script tag to the <head> of your page -->
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
+
+<script type="text/javascript">
+  VK.init({apiId: 6153795, onlyWidgets: true});
+</script>
+
+<!-- Put this div tag to the place, where the Comments block will be -->
+<div id="vk_comments"></div>
+<script type="text/javascript">
+VK.Widgets.Comments("vk_comments", {limit: 10, attach: "graffiti,photo,audio"});
+</script>
+
 				</div>
 			</div>
 			<!-- /.col-6 -->
