--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Иконка, которая будет на вкладке в браузере -->
 		<link rel="icon" href="img/favicon.jpg">
 		<!-- Заголовок на вкладке в браузере -->
-		<title>Людмила Кучинская-система прорыв</title>
+		<title>Людмила Кучинская-здоровое питание</title>
 		<!--Шрифты от Google-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet"> 
 		<!-- Подключаем наш файл со стилями, который находится в папке css-->
@@ -24,7 +24,7 @@
 <script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
 
 <script type="text/javascript">
-  VK.init({apiId: 6153795, onlyWidgets: true});
+  VK.init({apiId: 6478115, onlyWidgets: true});
 </script>
 	
 </head>
@@ -185,6 +185,7 @@
 <script type="text/javascript">
 VK.Widgets.Subscribe("vk_subscribe", {}, 134716510);
 </script></center>
+
 
 
 
