--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		
 		
 	<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
+<!--<script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
 
 <script type="text/javascript">
   VK.init({apiId: 6478115, onlyWidgets: true});
-</script>
+</script>-->
 	
 </head>
 
@@ -179,21 +179,22 @@
 
 <script type="text/javascript" src="//vk.com/js/api/openapi.js?154"></script>
 
+
 <!-- VK Widget -->
-<center>
+<!--<center>
 <div id="vk_subscribe"></div>
 <script type="text/javascript">
 VK.Widgets.Subscribe("vk_subscribe", {}, 134716510);
-</script></center>
+</script></center>-->
 
 
 
 
 <!-- Put this div tag to the place, where the Comments block will be -->
-<div id="vk_comments"></div>
+<!---<div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 10, attach: "graffiti,photo,audio"});
-</script>
+</script>-->
 
 				</div>
 			</div>
