--- a/index.html
+++ b/index.html
@@ -62,21 +62,19 @@
 	<div class="container">				
 	<div class="portfolio-block wow fadeIn">
 		<h3 class="portfolio-subtitle">Основная функция биопродуктов «Тяньши»<br>- это обеспечение безопасности здоровья</h3>
-		
 		<ul>
 			<li>Нейтрализация побочного действия спортивной фармакологии, лекарств, химиотерапии.</li>
 			<li>Предотвращение заболеваний на стадии возникновения.</li>
-			<li>Помогают обнаружить вирус организму и уничтожить его</li>
+			<li class="block">Активизируют <acronym title="Т- лимфоциты клетки киллеры. Вступая в контакт с «поражёнными» клетками,	они их уничтожают. Активность Т-лимфоцитов направлена именно против поражённых клеток собственного организма, а не против того, что их поразило. Все структуры тела, не подлежащие восстановлению, уничтожаются, и этим занимаются Т-лимфоциты.">Т-лимфоциты</acronym> для борьбы со свободными радикалами</li>
 			<li>Устранение дисбаланса питания</li>
 			<li>Безопасное выведение лишних жиров во время еды.</li>
 		</ul>
 		<h2 class="portfolio-title">Опыты с биопродукцией «Тяньши»:</h2>
-		<div class="row">
+		<div class="row centered">
 			<div class="col-md-6">
 			<div class="portfolio-col-1">
-				<!--<img src="img/Семинар-6-секретов-личных-финансов.jpg" alt="Семинар">-->
 
-<!-- 16:9 aspect ratio -->
+			<!-- 16:9 aspect ratio -->
 
 					<!--Видео 1-->
 			<h3>Эксперимент<br>«целебные капсулы»<br>Икан</h3>
@@ -95,8 +93,9 @@
 	<li>Целебные капсулы (Икан)</li>
 </ul>
 </div>
-<p>💡Капсулы "Икан" применяются, как добавка к основному рациону питания.
+<p>Капсулы "Икан" применяются, как добавка к основному рациону питания.
 Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.</p>
+<a href="https://vk.cc/86BQZC" class="link-button" target="_blank">Заказать продукт</a>
 			
 
 											<!--Видео 2-->
