--- a/index.html
+++ b/index.html
@@ -128,15 +128,20 @@
 					<div class="embed-responsive embed-responsive-16by9">
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v40VPLGNr5E?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
-				<p class="portfolio-text4">Программа лояльности для партнёров:</p>
+				<p class="portfolio-text5">Получите доступ в систему обучения партнёров и клиентов!</p>
+				<p>Обучайтесь 1 час в неделю</p>
+				<h2>И вы узнаете, как мы превращаем продукты в деньги для своих клиентов и партнёров</h2>
+				<a href="http://mlmsystem.su/land1-kucinskaja" class="link-button" target="_blank">Доступ в систему обучения</a>
 				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
 			<!--Видео 3-->
 				<h3>Видео опыт c бытовым прибором «Озонатор»</h3> 
 <div class="embed-responsive embed-responsive-16by9">
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wKcElcZDnhA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
-				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
-				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+				<p class="portfolio-text5">Получите доступ в систему обучения партнёров и клиентов!</p>
+				<p>Обучайтесь 1 час в неделю</p>
+				<h2>И вы узнаете, как мы превращаем продукты в деньги для своих клиентов и партнёров</h2>
+				<a href="http://mlmsystem.su/land1-kucinskaja" class="link-button" target="_blank">Доступ в систему обучения</a>
 			</div>
 			</div>
 			<!-- /.col-6 -->
@@ -170,8 +175,10 @@
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mPhvpQwdeYY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 				
-				<p class="portfolio-text5">Программа лояльности для партнёров:</p>
-				<a href="http://mlmsystem.su/land1-svshelestov" target="_blank">Регистрация на сайте</a>
+				<p class="portfolio-text5">Получите доступ в систему обучения партнёров и клиентов!</p>
+				<p>Обучайтесь 1 час в неделю</p>
+				<h2>И вы узнаете, как мы превращаем продукты в деньги для своих клиентов и партнёров</h2>
+				<a href="http://mlmsystem.su/land1-kucinskaja" class="link-button" target="_blank">Доступ в систему обучения</a>
 
 				<div class="ya-share2 col-sm-12" data-services="vkontakte,facebook,odnoklassniki,gplus,viber,whatsapp,skype,telegram" data-counter=""></div>
 
