--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- /.col-7 -->
 		<div class="col-lg-5 col-md-4 col-sm-6">
 			
-			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Консультант-дистрибьютор</p>
+			<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Консультант-предприниматель</p>
 			<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Кучинская Людмила</h1>
 			<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.3s">Элитная биопродукция<br>
 			Компании «Тяньши»</p>
