--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 <p>Капсулы "Икан" применяются, как добавка к основному рациону питания.
 Таким образом без побочных эффектов для здоровья нейтрализуются свободные радикалы, токсины и продукты распада в организме.</p>
-<a href="https://vk.cc/86BQZC" class="link-button" target="_blank">Заказать продукт</a>
+<a href="http://ru.tiens.com/InvitePage?code=SEF3VQPglJ" class="link-button" target="_blank">Заказать продукт</a>
 			
 
 											<!--Видео 2-->
